--- a/Cabana das Grifes/index.html
+++ b/Cabana das Grifes/index.html
@@ -67,9 +67,7 @@
     <section class="aba">
       <h2>Como Chegar</h2>
       <p>Shopping Albatroz-Cajazeiras, Estrada do Coqueiro Grande 418, Salvador, BA</p>
-      <iframe title="Mapa da loja"
-              src="https://www.bing.com/maps?q=Shopping+Albatroz-Cajazeiras&cp=-12.902174~-38.40668&lvl=16.0"
-              width="600" height="450" style="border:0;" allowfullscreen loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.0829261091003!2d-38.409145224924714!3d-12.902389087406604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7161129671d405f%3A0x77335d7404a2057d!2sShopping%20Albatroz!5e0!3m2!1spt-BR!2sbr!4v1751931480191!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <section class="aba">
